src/test/run-pass/issue-933.rs
pure fn c() -> bool { check c(); true }
fn main() {}
