src/test/compile-fail/block-must-not-have-result-while.rs
// error-pattern:mismatched types: expected `()` but found `bool`

fn main() {
    loop {
        true
    }
}